apps/nextcloud/09.server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-server
  namespace: nextcloud
  labels:
    app: nextcloud-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-server
  template:
    metadata:
      labels:
        app: nextcloud-server
    spec:
      containers:
        - name: nextcloud
          image: nextcloud
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          volumeMounts:
          - name: nextcloud-data
            mountPath: /var/www/html
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data
